--- a/water-therapy/index.html
+++ b/water-therapy/index.html
@@ -171,6 +171,28 @@ a:hover {
 
 .bcrumbs li a, .bcrumbs li span {
         display: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0;
+	font-weight: 700;
+	font-family: Poppins;
+	color: #fff;
+}
+
+/* Donate Button */
+#nav-menu-item-3521 a {
+	color: white;
+  background-color: #92278F;
+	border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC
 }</style>
 <style type="text/css" data-type="vc_shortcodes-custom-css">.vc_custom_1714461887841{padding-bottom: 20px !important;}.vc_custom_1714462047903{padding-bottom: 10px !important;}</style>
 <noscript><style>.wpb_animate_when_almost_visible { opacity: 1; }</style></noscript>	
