--- a/index.html
+++ b/index.html
@@ -172,6 +172,28 @@ a:hover {
 
 .bcrumbs li a, .bcrumbs li span {
         display: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0;
+	font-weight: 700;
+	font-family: Poppins;
+	color: #222222;
+}
+
+/* Donate Button */
+#nav-menu-item-3521 a {
+	color: white;
+  background-color: #92278F;
+	border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC
 }</style>
 <style type="text/css" data-type="vc_custom-css">.container-fluid>.navbar-collapse, .container-fluid>.navbar-header, .container>.navbar-collapse, .container>.navbar-header {
 Margin-right:0;
@@ -285,6 +307,7 @@ Margin-right:0;
 	<li id="nav-menu-item-3497" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./support-us/index.html" class="menu-link sub-menu-link">Support Us</a></li>
 	<li id="nav-menu-item-3499" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./supportachild/index.html" class="menu-link sub-menu-link">Support A Child</a></li>
 	<li id="nav-menu-item-3498" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./buildingproject/index.html" class="menu-link sub-menu-link">Building Project</a></li>
+	<!-- <li id="nav-menu-item-3869" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./friendsofthezeebahfoundation/index.html" class="menu-link sub-menu-link">Friends of the Zeebah Foundation</a></li> -->
 </ul>
 </li>
 <li id="nav-menu-item-1132" class="dropdown open   menu-item-even menu-item-depth-0 menu-item menu-item-type-post_type menu-item-object-page"><a href="./contact-us/index.html" class="menu-link dropdown-toggle">Contact Us</a></li>
