--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ Margin-right:0;
 	<li id="nav-menu-item-3497" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./support-us/index.html" class="menu-link sub-menu-link">Support Us</a></li>
 	<li id="nav-menu-item-3499" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./supportachild/index.html" class="menu-link sub-menu-link">Support A Child</a></li>
 	<li id="nav-menu-item-3498" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./buildingproject/index.html" class="menu-link sub-menu-link">Building Project</a></li>
-	<!-- <li id="nav-menu-item-3869" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./friendsofthezeebahfoundation/index.html" class="menu-link sub-menu-link">Friends of the Zeebah Foundation</a></li> -->
+	<li id="nav-menu-item-3869" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./friendsofthezeebahfoundation/index.html" class="menu-link sub-menu-link">Friends of the Zeebah Foundation</a></li>
 </ul>
 </li>
 <li id="nav-menu-item-1132" class="dropdown open   menu-item-even menu-item-depth-0 menu-item menu-item-type-post_type menu-item-object-page"><a href="./contact-us/index.html" class="menu-link dropdown-toggle">Contact Us</a></li>
@@ -448,7 +448,9 @@ Margin-right:0;
 
 	<div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
-			<p><span style="color: #000000;">Jean-Claude Havyarimana, ardent racer and Friend of The Zeebah Foundation will be participating at the Comrades 90km Marathon &ndash; Nakanjani 2024 &ndash; scheduled to take place on June 9, 2024, in Durban, South Africa. This sets off activities to commemorate our 5th anniversary and generate funds for a proposed state-of-the-art facility in Abuja, Nigeria. </span><br>
+			<p><span style="color: #000000;">Tuesday 26th November 2024 marked a groundbreaking moment in the world of art and disability awareness. 15-year-old Kanyeyachukwu Tagbo-Okeke, an autistic artist and student of The Zeebah Foundation commenced his attempt to break the GUINNESS WORLD RECORDS®  title for the Largest Art Canvas.
+				The current record, held by Emad Salehi, stands at 9,652sqm. Kanyeyachukwu’s canvas, measuring an impressive 12,300sqm will reflect his unique perspective, artistic talent, and unwavering passion for self-expression.
+				In addition to raising awareness for autism, Kanyeyachukwu is also using this record attempt, titled Impossibility is a Myth to raise funds for The Zeebah Foundation's proposed state-of-the-art Autism Resource Centre.</span><br>
 <span style="color: #000000;">Support us in making this vision a reality by contributing to our fundraising campaign. Your donation of any amount will bring us closer to achieving our goal of building this facility. We are grateful for your consideration.</span></p>
 <p><span style="color: #000000;">For more details &#128222; +234 (0) 703 804 1161&nbsp;</span></p>
 
