--- a/our-approach/index.html
+++ b/our-approach/index.html
@@ -306,6 +306,7 @@ h6 {
 	<li id="nav-menu-item-3497" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../support-us/index.html" class="menu-link sub-menu-link">Support Us</a></li>
 	<li id="nav-menu-item-3499" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../supportachild/index.html" class="menu-link sub-menu-link">Support A Child</a></li>
 	<li id="nav-menu-item-3498" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../buildingproject/index.html" class="menu-link sub-menu-link">Building Project</a></li>
+	<li id="nav-menu-item-3869" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../friendsofthezeebahfoundation/index.html" class="menu-link sub-menu-link">Friends of the Zeebah Foundation</a></li>
 </ul>
 </li>
 <li id="nav-menu-item-1132" class="dropdown open   menu-item-even menu-item-depth-0 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../contact-us/index.html" class="menu-link dropdown-toggle">Contact Us</a></li>
