--- a/friendsofthezeebahfoundation/index.html
+++ b/friendsofthezeebahfoundation/index.html
@@ -303,7 +303,7 @@ h6 {
 </ul>
 </li>
 <li id="nav-menu-item-3521" class="dropdown open   menu-item-even menu-item-depth-0 menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children">
-<a href="./../autism-resource-center-fundraiser/index.html" class="menu-link dropdown-toggle">Donate</a>
+<a href="#" class="menu-link dropdown-toggle">Donate</a>
 <ul class="dropdown-menu menu-odd  menu-depth-1">
 	<li id="nav-menu-item-3497" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../support-us/index.html" class="menu-link sub-menu-link">Support Us</a></li>
 	<li id="nav-menu-item-3499" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../supportachild/index.html" class="menu-link sub-menu-link">Support A Child</a></li>
@@ -414,46 +414,34 @@ h6 {
 		</div>
 	</div>
 <div class="vc_row wpb_row vc_inner vc_row-fluid">
+
 <div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper"></div></div></div>
 <div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper">
-	<div class="wpb_text_column wpb_content_element ">
-		<div class="wpb_wrapper">
-			<div class="give-embed-form-wrapper" id="give-673e078c1bbd8">
-<iframe name="give-embed-form" src=".//give/supportus?giveDonationFormInIframe=1&amp;simply_static_page=36" data-autoscroll="0" onload="if( 'undefined' !== typeof Give ) { Give.initializeIframeResize(this) }" style="border: 0;visibility: hidden;min-height: 598px;"></iframe><div class="iframe-loader">
-<div style="height: calc(100% - 28px);
-		width: calc(100% - 20px);
-		max-width: 552px;
-		margin: 10px auto 10px auto;
-		background: #fff;
-		border-radius: 6px;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		-webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-			0 3px 1px -2px rgba(0, 0, 0, 0.2),
-			0 1px 5px 0 rgba(0, 0, 0, 0.12);
-		box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-			0 3px 1px -2px rgba(0, 0, 0, 0.2),
-			0 1px 5px 0 rgba(0, 0, 0, 0.12);">
-    <div style="pointer-events: none;
-        height: 90px;
-        width: 90px;
-        background-image: url("data:image/svg+xml;charset=utf8,%3C?xml version='1.0' encoding='utf-8'?%3E%3C!-- Generator: Adobe Illustrator 24.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 349 348' style='enable-background:new 0 0 349 348;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0{fill:%23eac610;} %3C/style%3E%3Cpath class='st0' d='M25.1,204.57c-13.38,0-24.47-10.6-24.97-24.08C0.04,178.09,0,175.97,0,174C0,77.78,78.28-0.5,174.5-0.5 c13.81,0,25,11.19,25,25s-11.19,25-25,25C105.85,49.5,50,105.35,50,174c0,1.37,0.03,2.85,0.1,4.65c0.51,13.8-10.27,25.39-24.07,25.9 C25.72,204.56,25.41,204.57,25.1,204.57z'/%3E%3Cpath class='st0' d='M174.5,348.5c-13.81,0-25-11.19-25-25c0-13.81,11.19-25,25-25c68.65,0,124.5-55.85,124.5-124.5 c0-1.38-0.03-2.85-0.1-4.65c-0.51-13.8,10.26-25.4,24.06-25.91c13.83-0.53,25.4,10.26,25.91,24.06c0.09,2.39,0.13,4.51,0.13,6.49 C349,270.22,270.72,348.5,174.5,348.5z'/%3E%3C/svg%3E");
-        animation: spin 0.6s linear infinite;"></div>
-</div>
-</div>
-</div>
+		<!-- start of button -->
+	<div style="margin: 20px 20px 20px 70px;" class="wpb_text_column wpb_content_element ">
 
-		</div>
+		<a href="https://paystack.com/pay/zeebahfoundation" style="width: max-content; padding: 10px 40px; background-color: rgb(0, 194, 247, 0.74); color: #fff; border-radius: 5px; text-decoration: none; text-align: center; font-size: 20px; font-weight: bold;">Paystack</a>
+
+	</div>
+	<!-- end of button -->
+		<div style="margin: 50px 10px;"></div>
+		<div style="margin: 20px 20px 20px 70px;" class="wpb_text_column wpb_content_element ">
+
+		<a href="https://gofund.me/10cae50e" style="width: max-content; padding: 10px 30px; background-color: rgba(0, 194, 247, 0.74); color: #fff; border-radius: 5px; text-decoration: none; text-align: center; font-size: 20px; font-weight: bold;">GoFundMe</a>
+
 	</div>
 </div></div></div>
+
+
+<!-- This is a separation -->
 <div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper"></div></div></div>
 </div>
 </div></div></div></div>
+<!-- end of separation -->
 <div class="vc_row wpb_row vc_row-fluid " style=" "><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
-			<h3 style="text-align: center;"><strong>Your donation will enable us provide the following services</strong></h3>
+			<h3 style="text-align: center; margin-top: 40px;"><strong>Your donation will enable us provide the following services</strong></h3>
 
 		</div>
 	</div>
@@ -535,7 +523,8 @@ h6 {
 </div></div></div>
 </div>
 </div></div></div></div>
-</div></div>
+</div>
+</div>
 				</div>
 				<div class="clearfix"></div>
 				<div class="gap-60"></div>
@@ -556,7 +545,7 @@ h6 {
   <div class="footer-bottom">
 	<div class="container">
 		<div class="copyrights">
-			Copyright © 2024 zeebahfoundation.com. All rights reserved. Designed by  GidiNerd.com		</div>
+			Copyright © 2024 zeebahfoundation.com. All rights reserved.		</div>
 		<div class="social-media">
 					</div>
 	</div>
