--- a/friendsofthezeebahfoundation/index.html
+++ b/friendsofthezeebahfoundation/index.html
@@ -416,21 +416,29 @@ h6 {
 <div class="vc_row wpb_row vc_inner vc_row-fluid">
 
 <div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper"></div></div></div>
-<div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper">
-		<!-- start of button -->
-	<div style="margin: 20px 20px 20px 70px;" class="wpb_text_column wpb_content_element ">
 
-		<a href="https://paystack.com/pay/zeebahfoundation" style="width: max-content; padding: 10px 40px; background-color: rgb(0, 194, 247, 0.74); color: #fff; border-radius: 5px; text-decoration: none; text-align: center; font-size: 20px; font-weight: bold;">Paystack</a>
+<!-- buttons --><div class="wpb_column vc_column_container vc_col-sm-4">
+  <div class="vc_column-inner">
+    <div class="wpb_wrapper">
+      <!-- start of button -->
+      <div class="wpb_text_column wpb_content_element" style="text-align: center; margin: 1.25rem;">
+        <a href="https://paystack.com/pay/zeebahfoundation" 
+           style="display: inline-block; padding: 0.35rem 3.2rem; background-color: rgb(0, 194, 247, 0.74); color: #fff; border-radius: 0.3125rem; text-decoration: none; text-align: center; font-size: 1.65rem; font-weight: bold;">
+          Paystack
+        </a>
+      </div>
+      <!-- end of button -->
+      <div style="margin: 3rem 0;"></div>
+      <div class="wpb_text_column wpb_content_element" style="text-align: center; margin: 1.25rem;">
+        <a href="https://gofund.me/10cae50e" 
+           style="display: inline-block; padding: 0.25rem 2.5rem; background-color: rgb(0, 194, 247, 0.74); color: #fff; border-radius: 0.3125rem; text-decoration: none; text-align: center; font-size: 1.65rem; font-weight: bold;">
+          GoFundMe
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
 
-	</div>
-	<!-- end of button -->
-		<div style="margin: 50px 10px;"></div>
-		<div style="margin: 20px 20px 20px 70px;" class="wpb_text_column wpb_content_element ">
-
-		<a href="https://gofund.me/10cae50e" style="width: max-content; padding: 10px 30px; background-color: rgba(0, 194, 247, 0.74); color: #fff; border-radius: 5px; text-decoration: none; text-align: center; font-size: 20px; font-weight: bold;">GoFundMe</a>
-
-	</div>
-</div></div></div>
 
 
 <!-- This is a separation -->
