--- a/our-approach/index.html
+++ b/our-approach/index.html
@@ -275,31 +275,37 @@ h6 {
 </ul>
 </li>
 <li id="nav-menu-item-1552" class="dropdown open   menu-item-even menu-item-depth-0 menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
-<a href="#" class="menu-link dropdown-toggle">Media &#038; Events</a>
+<a href="#" class="menu-link dropdown-toggle">Media</a>
 <ul class="dropdown-menu menu-odd  menu-depth-1">
 	<li id="nav-menu-item-3523" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../gallery/index.html" class="menu-link sub-menu-link">Gallery</a></li>
 	<li id="nav-menu-item-2507" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../blog/index.html" class="menu-link sub-menu-link">Articles</a></li>
 	<li id="nav-menu-item-2282" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../newsletters/index.html" class="menu-link sub-menu-link">Newsletters</a></li>
 	<li id="nav-menu-item-1607" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
-<a href="#" class="menu-link sub-menu-link">Events</a>
+<!-- <a href="#" class="menu-link sub-menu-link">Events</a>
 	<ul class="dropdown-menu menu-even  menu-depth-2">
-		<li id="nav-menu-item-3655" class=" dropdown-submenu mul sub-sub-menu-item menu-item-even menu-item-depth-2 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../open-day/index.html" class="menu-link sub-menu-link">Open Day</a></li>
-		<li id="nav-menu-item-2098" class=" dropdown-submenu mul sub-sub-menu-item menu-item-even menu-item-depth-2 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../excursions/index.html" class="menu-link sub-menu-link">Excursions</a></li>
-		<li id="nav-menu-item-3782" class=" dropdown-submenu mul sub-sub-menu-item menu-item-even menu-item-depth-2 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../end-of-year/index.html" class="menu-link sub-menu-link">End of Year</a></li>
-		<li id="nav-menu-item-3516" class=" dropdown-submenu mul sub-sub-menu-item menu-item-even menu-item-depth-2 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../marathons/index.html" class="menu-link sub-menu-link">Marathons</a></li>
-		<li id="nav-menu-item-3511" class=" dropdown-submenu mul sub-sub-menu-item menu-item-even menu-item-depth-2 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../workshop/index.html" class="menu-link sub-menu-link">Workshops</a></li>
-		<li id="nav-menu-item-1701" class=" dropdown-submenu mul sub-sub-menu-item menu-item-even menu-item-depth-2 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../official-launch/index.html" class="menu-link sub-menu-link">Official Launch</a></li>
-		<li id="nav-menu-item-3794" class=" dropdown-submenu mul sub-sub-menu-item menu-item-even menu-item-depth-2 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../from-the-founder/index.html" class="menu-link sub-menu-link">From the Founder</a></li>
-		<li id="nav-menu-item-2102" class=" dropdown-submenu mul sub-sub-menu-item menu-item-even menu-item-depth-2 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../staff-training-sessions/index.html" class="menu-link sub-menu-link">Staff Training Sessions</a></li>
-		<li id="nav-menu-item-2101" class=" dropdown-submenu mul sub-sub-menu-item menu-item-even menu-item-depth-2 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../parent-training-sessions/index.html" class="menu-link sub-menu-link">Parent Training Sessions</a></li>
-		<li id="nav-menu-item-3507" class=" dropdown-submenu mul sub-sub-menu-item menu-item-even menu-item-depth-2 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../world-autism-awareness-month/index.html" class="menu-link sub-menu-link">World Autism Awareness Month</a></li>
-		<li id="nav-menu-item-2925" class=" dropdown-submenu mul sub-sub-menu-item menu-item-even menu-item-depth-2 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../farewell-and-moving-up-ceremony/index.html" class="menu-link sub-menu-link">Farewell and Moving Up Ceremony</a></li>
-		<li id="nav-menu-item-2099" class=" dropdown-submenu mul sub-sub-menu-item menu-item-even menu-item-depth-2 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../zeebah-foundation-first-anniversary/index.html" class="menu-link sub-menu-link">The Zeebah Foundation First Anniversary</a></li>
-	</ul>
+		
+	</ul> -->
 </li>
 	<li id="nav-menu-item-1345" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../testimonials-2/index.html" class="menu-link sub-menu-link">Testimonials</a></li>
 </ul>
 </li>
+<li id="nav-menu-item-2106" class="dropdown open   menu-item-even menu-item-depth-0 menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
+	<a href="#" class="menu-link dropdown-toggle">Events</a>
+	<ul class="dropdown-menu menu-odd  menu-depth-1">
+		<li id="nav-menu-item-3655" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../open-day/index.html" class="menu-link sub-menu-link">Open Day</a></li>
+		<li id="nav-menu-item-2098" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../excursions/index.html" class="menu-link sub-menu-link">Excursions</a></li>
+		<li id="nav-menu-item-3782" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../end-of-year/index.html" class="menu-link sub-menu-link">End of Year</a></li>
+		<li id="nav-menu-item-3516" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../marathons/index.html" class="menu-link sub-menu-link">Marathons</a></li>
+		<li id="nav-menu-item-3511" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../workshop/index.html" class="menu-link sub-menu-link">Workshops</a></li>
+		<li id="nav-menu-item-1701" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../official-launch/index.html" class="menu-link sub-menu-link">Official Launch</a></li>
+		<li id="nav-menu-item-3794" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../from-the-founder/index.html" class="menu-link sub-menu-link">From the Founder</a></li>
+		<li id="nav-menu-item-2102" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../staff-training-sessions/index.html" class="menu-link sub-menu-link">Staff Training Sessions</a></li>
+		<li id="nav-menu-item-2101" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../parent-training-sessions/index.html" class="menu-link sub-menu-link">Parent Training Sessions</a></li>
+		<li id="nav-menu-item-3507" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../world-autism-awareness-month/index.html" class="menu-link sub-menu-link">World Autism Awareness Month</a></li>
+		<li id="nav-menu-item-2925" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../farewell-and-moving-up-ceremony/index.html" class="menu-link sub-menu-link">Farewell and Moving Up Ceremony</a></li>
+		<li id="nav-menu-item-2099" class=" dropdown-submenu mul  menu-item-odd menu-item-depth-1 menu-item menu-item-type-post_type menu-item-object-page"><a href="./../zeebah-foundation-first-anniversary/index.html" class="menu-link sub-menu-link">The Zeebah Foundation First Anniversary</a></li>
+	</ul>
+	</li>
 <li id="nav-menu-item-3521" class="dropdown open   menu-item-even menu-item-depth-0 menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
 <a href="#" class="menu-link dropdown-toggle">Donate</a>
 <ul class="dropdown-menu menu-odd  menu-depth-1">
