--- a/zeebah-foundation-first-anniversary/index.html
+++ b/zeebah-foundation-first-anniversary/index.html
@@ -14,6 +14,9 @@
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="//stats.wp.com">
 <link rel="dns-prefetch" href="//fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
 <link rel="alternate" type="application/rss+xml" title="The Zeebah Foundation &raquo; Feed" href="./../feed/index.html">
 <link rel="alternate" type="application/rss+xml" title="The Zeebah Foundation &raquo; Comments Feed" href="./../comments/feed/index.html">
 <script type="text/javascript">
