--- a/testimonials-2/index.html
+++ b/testimonials-2/index.html
@@ -427,6 +427,7 @@ h6 {
 	</div>
 </div></div></div>
 </div>
+<div class="vc_empty_space" style="height: 50px"><span class="vc_empty_space_inner"></span></div>
 <div class="vc_row wpb_row vc_inner vc_row-fluid">
 <div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_video_widget wpb_content_element vc_clearfix   vc_video-aspect-ratio-169 vc_video-el-width-100 vc_video-align-left">
@@ -453,6 +454,7 @@ h6 {
 	</div>
 </div></div></div>
 </div>
+<div class="vc_empty_space" style="height: 50px"><span class="vc_empty_space_inner"></span></div>
 <div class="vc_row wpb_row vc_inner vc_row-fluid">
 <div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_video_widget wpb_content_element vc_clearfix   vc_video-aspect-ratio-169 vc_video-el-width-100 vc_video-align-left">
@@ -479,6 +481,7 @@ h6 {
 	</div>
 </div></div></div>
 </div>
+<div class="vc_empty_space" style="height: 50px"><span class="vc_empty_space_inner"></span></div>
 <div class="vc_row wpb_row vc_inner vc_row-fluid">
 <div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_video_widget wpb_content_element vc_clearfix   vc_video-aspect-ratio-169 vc_video-el-width-100 vc_video-align-left">
@@ -505,7 +508,7 @@ h6 {
 	</div>
 </div></div></div>
 </div>
-</div></div></div></div>
+<div class="vc_empty_space" style="height: 50px"><span class="vc_empty_space_inner"></span></div>
 <div class="vc_row wpb_row vc_row-fluid ">
 <div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_video_widget wpb_content_element vc_clearfix   vc_video-aspect-ratio-169 vc_video-el-width-100 vc_video-align-left">
@@ -531,7 +534,8 @@ h6 {
 		</div>
 	</div>
 </div></div></div>
-<div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper">
+</div>
+<!-- <div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper">
 <div class="vc_empty_space" style="height: 50px"><span class="vc_empty_space_inner"></span></div>
 <div class="vc_row wpb_row vc_inner vc_row-fluid">
 <div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper">
@@ -539,8 +543,10 @@ h6 {
 		<div class="wpb_wrapper">
 			
 		</div>
-	</div>
-
+	</div> -->
+	<div class="vc_empty_space" style="height: 50px"><span class="vc_empty_space_inner"></span></div>
+    <div class="vc_row wpb_row vc_inner vc_row-fluid">
+    <div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_video_widget wpb_content_element vc_clearfix   vc_video-aspect-ratio-169 vc_video-el-width-100 vc_video-align-left">
 		<div class="wpb_wrapper">
 			
@@ -548,7 +554,7 @@ h6 {
 		</div>
 	</div>
 </div></div></div>
-<div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper">
+<!-- <div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
 			
@@ -582,7 +588,7 @@ h6 {
 
 		</div>
 	</div>
-</div></div></div>
+</div></div></div> -->
 <div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_video_widget wpb_content_element vc_clearfix   vc_video-aspect-ratio-169 vc_video-el-width-100 vc_video-align-left">
 		<div class="wpb_wrapper">
@@ -600,6 +606,7 @@ h6 {
 	</div>
 </div></div></div>
 </div>
+<div class="vc_empty_space" style="height: 50px"><span class="vc_empty_space_inner"></span></div>
 <div class="vc_row wpb_row vc_row-fluid ">
 <div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_video_widget wpb_content_element vc_clearfix   vc_video-aspect-ratio-169 vc_video-el-width-100 vc_video-align-left">
