--- a/index.html
+++ b/index.html
@@ -445,9 +445,9 @@ Margin-right:0;
 	<div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
 		
-		<!-----GWR Video update 	---->
+		<!-----GWR Video update begin	---->
 			<iframe width="550" height="300" src="https://www.youtube.com/embed/TMyI7zuvozI"></iframe> 
-		<!-----GWR Video update 	---->	
+		<!-----GWR Video update end	---->	
 				
 <style>
 #myVideo {<br />  position: fixed;<br />  right: 0;<br />  bottom: 0;<br />  min-width: 100%;<br />  max-height: 100%;<br />}
