--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ Margin-right:0;
 		<div class="wpb_wrapper">
 		
 		<!-----GWR Video update begin	---->
-			<iframe width="550" height="300" src="https://www.youtube.com/embed/TMyI7zuvozI"></iframe> 
+			<iframe width="550" height="300" src="https://www.youtube.com/embed/TMyI7zuvozI?autoplay=1"></iframe> 
 		<!-----GWR Video update end	---->	
 				
 <style>
