--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ Margin-right:0;
         <div class="vc_column-inner">
             <div class="wpb_wrapper">
                 <div class="donate-button-container">
-                    <a href="https://zeebahfoundation.com/buildingproject/index.html" class="donate-button">Donate Now</a>
+                    <a href="./buildingproject/index.html" class="donate-button">Donate Now</a>
                 </div>
             </div>
         </div>
