--- a/newsletters/index.html
+++ b/newsletters/index.html
@@ -40,7 +40,7 @@ h6 {
   border-left: 1px solid #CCCCCC
 }
 
-/*********Newsletter tabs******/
+/***Newsletter tabs***/
  .containerr {
             max-width: 1200px;
             margin: 0 auto;
