--- a/world-autism-awareness-month/advocacywalk.html
+++ b/world-autism-awareness-month/advocacywalk.html
@@ -514,7 +514,7 @@ h6 {
   <p><span style="color: #000000;">The event which took place within the metropolis was covered with autism advocates who proudly participated in educating the public on the condition, signs, symptoms, advantages of early detection etc to promote autism awareness and acceptance.</span></p> </br>
 
  
- <h4 style="font-size:22px; text-align: center;">Click image to view</h4> 
+ <h4 style="font-size:22px; text-align: center;">Click to view image</h4> 
    <!-- Image Slider -->
   <div class="slider" id="imageSlider">
     <!-- Replace src values with real images -->
@@ -532,7 +532,7 @@ h6 {
   </div>
   </br>
 
- <h4 style="font-size:22px; text-align: center;">Click image to view</h4> 
+
   <!-- Image Slider -->
   <div class="slider" id="imageSlider">
     <!-- Replace src values with real images -->
