--- a/newsletters/index.html
+++ b/newsletters/index.html
@@ -168,6 +168,7 @@ h6 {
             <a href="https://drive.google.com/file/d/1J5d9ZJcsFOke1vgT-9bwapZcmsqaGpyn/view?usp=drive_link">February</a>
             <a href="https://drive.google.com/file/d/17YVgJKvddpjSjniqggmfZmxEMy72oDxQ/view?usp=drive_link">March</a>
             <a href="https://drive.google.com/file/d/1-h3CiJmu380h5KytZF6au33mSq6r1K3s/view?usp=drive_link">April</a>
+			<a href="https://drive.google.com/file/d/1zFUNoBf2PuvVvZch0znghdilMuFx8vbO/view?usp=drive_link">May</a>
         </div>
 		   
 
