--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@ Margin-right:0;
                     <!-- Continue to Support with Arrow Animation -->
                     <div style="margin-top: 20px;">
                         <a href="buildingproject/index.html" style="display: inline-block; color: #1c57a1; font-weight: bold; text-decoration: none; font-size: 18px; position: relative; padding-right: 30px;">
-                            Please continue to support this dream
+                            To support this initiative, please click here
                             <span style="position: absolute; right: 0; animation: arrowBounce 1s infinite;">
                                 >>> 
                             </span>
