--- a/newsletters/index.html
+++ b/newsletters/index.html
@@ -169,6 +169,7 @@ h6 {
             <a href="https://drive.google.com/file/d/17YVgJKvddpjSjniqggmfZmxEMy72oDxQ/view?usp=drive_link">March</a>
             <a href="https://drive.google.com/file/d/1-h3CiJmu380h5KytZF6au33mSq6r1K3s/view?usp=drive_link">April</a>
 			<a href="https://drive.google.com/file/d/1zFUNoBf2PuvVvZch0znghdilMuFx8vbO/view?usp=drive_link">May</a>
+			<a href="https://drive.google.com/file/d/1dRGgBxpweNAT8_Hmz0JpMpY_WaGQ0IBy/view?usp=drive_link">June</a>
         </div>
 		   
 
