--- a/board-members/index.html
+++ b/board-members/index.html
@@ -537,7 +537,7 @@ h6 {
 <h2 style="text-align: left;font-family:Shadows Into Light Two;font-weight:400;font-style:normal" class="vc_custom_heading">Ms. Matlou Tsotetsi</h2>
 	<div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
-			<p style="text-align: center;">Ms. Matlou Tsotetsi is a seasoned marketer who is classically trained in this discipline at the Wits (now University of Johannesburg). Her experience spans over 20 years which includes a myriad of industries including the South African and Nigerian public and private sector projects.</p>
+			<p style="text-align: center;">An accomplished marketing strategist with over two decades of experience across African markets, specializing in Nigeria and South Africa. Founder and CEO of Ellen Grace Consulting, with proven expertise in developing brand strategies that deliver measurable commercial outcomes across diverse industries. She is currently the Managing Director of Ellen Grace Consulting</p>
 
 		</div>
 	</div>
