--- a/donors-individual/index.html
+++ b/donors-individual/index.html
@@ -410,309 +410,134 @@ h6 {
 	<div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
 			<ul>
-<li>
-<h2>Otunba Babatunde Morakinyo</h2>
-</li>
-<li>
-<h2>Asue Ighodalo</h2>
-</li>
-<li>
-<h2>Tunde Folawiyo</h2>
-</li>
-<li>
-<h2>Scott Tommey</h2>
-</li>
-<li>
-<h2>Eke Urum Kalu</h2>
-</li>
-<li>
-<h2>Mustapha Umar Ali</h2>
-</li>
-<li>
-<h2>Oseragba Adogbeji Benjamin</h2>
-</li>
-<li>
-<h2>Ajibade Adewale Ajose</h2>
-</li>
-<li>
-<h2>Dorathy Bassey Umoetok</h2>
-</li>
-<li>
-<h2>Hon. Kabir Tukura</h2>
-</li>
-<li>
-<h2>Mrs Aisha Omolayole</h2>
-</li>
-<li>
-<h2>Duke, Peter Ekei</h2>
-</li>
-<li>
-<h2>Amina Ruth Sijuwade</h2>
-</li>
-<li>
-<h2>Mrs Sara</h2>
-</li>
-<li>
-<h2>Mrs Mbakwe Sophia Apunegbe</h2>
-</li>
-<li>
-<h2>Alex Egbona</h2>
-</li>
-<li>
-<h2>Odiawa Ochei, Ehigie</h2>
-</li>
-<li>
-<h2>Mrs Chinyere Obijuru</h2>
-</li>
-<li>
-<h2>Agbo Adams Alegwu</h2>
-</li>
-<li>
-<h2>Benjamin Enobong Okoko</h2>
-</li>
-<li>
-<h2>Mrs Arike Aiyetigbo</h2>
-</li>
-<li>
-<h2>Oluyede Adegoke</h2>
-</li>
-<li>
-<h2>Mr. Oseomoje Imoukhuede</h2>
-</li>
-<li>
-<h2>Dr Mrs Hajia Tanko</h2>
-</li>
-<li>
-<h2>Mrs Nonny Julie Ezekwesili</h2>
-</li>
-<li>
-<h2>Adebowale Emmanuel Olujimi</h2>
-</li>
-<li>
-<h2>Dr. Amara Uche</h2>
-</li>
-<li>
-<h2>Laura Steinhardt</h2>
-</li>
-<li>
-<h2>David Olayinka T. Oluwatimilehin</h2>
-</li>
-<li>
-<h2>Agbo Adams Alegwuagbo</h2>
-</li>
-<li>
-<h2>Mrs. Toritseju Akharume</h2>
-</li>
-<li>
-<h2>Ms. Omotoke Kuteyi</h2>
-</li>
-<li>
-<h2>Chukwudi Ogonna Momah</h2>
-</li>
-<li>
-<h2>Jean-Claude Havyarimana</h2>
-</li>
-<li>
-<h2>Jonathan Warshawsky</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Ms. Amina Aminu Maitama Centurion Law Group</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mrs. Adesua Dozie</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr &amp; Mrs Bolaji Gambari</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. &amp; Mrs. Femi Bajomo</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. Luckmore Kudakwashe Lobo</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. Ali Taan</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. Alabraba Lance Datonye</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. &amp; Mrs. Nahi Halabi</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Her Excellency Mrs. Obioma Liyel-Imoke</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. Roland Ewubare</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. Olubunmi Otoki</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. &amp; Mrs. Eleojo Peters</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mrs. Tonia Nwamanna</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. &amp; Mrs. Shola Coker</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. Okhomina Osamede</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. Ado Oseragbaje</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. Andrew Esemezie</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. Ali Halawi</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. Rajesh Shamdas Hathiramani</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Dr. &amp; Mrs. Bolaji Ogundare</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. Bayo Adebiyi</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Miss Amina Maina</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. Achumilie Majija</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mrs. Adeola Agunbiade</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Lydie Mananda &ndash; Niyonzima</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Major General Bakare</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Prof. Ifeanyi Oramah</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. Olaiya Phillips</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Miss Muthoni Mugambi</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mr. Benjamin Onyekachi Madu</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Ms. Mfon Akpan</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Ms. Olufisayo Bakare</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Mrs. Rose Eshiet</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Karimot Abodunrin Tukur</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Ms. Anita</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>
-<span data-contrast="auto">Alhaji Mahmud Mohammed Bamanga Tukur</span><span data-ccp-props='{"201341983":0,"335559739":0,"335559740":360}'>&nbsp;</span>
-</h2>
-</li>
-<li>
-<h2>Mr. &amp; Mrs. Oyakhire Jamgbadi</h2>
-</li>
-<li>
-<h2>Miss Dabirichi Chukwuezi</h2>
-</li>
-<li>
-<h2>Mr. Joshua Nehemiah</h2>
-</li>
-<li>
-<h2>Nseno J. Umoh</h2>
-</li>
-<li>
-<h2>Damian D. Dodo SAN</h2>
-</li>
-<li>
-<h2>Rele Sonariwo</h2>
-</li>
+  <li><h2>Abesin Yusuf Olanrewaju</h2></li>
+  <li><h2>Achumilie Majija</h2></li>
+  <li><h2>Adebiyi Adebayo Olanrewaju</h2></li>
+  <li><h2>Adeola Agunbiade</h2></li>
+  <li><h2>Adefunke Rosemary Bombata</h2></li>
+  <li><h2>Adesua Dozie</h2></li>
+  <li><h2>Adewale Ajibade Ajose</h2></li>
+  <li><h2>Adeyinka Ayoola</h2></li>
+  <li><h2>Ado Oseragbaje</h2></li>
+  <li><h2>Agbo Alegwu Adams</h2></li>
+  <li><h2>Ahonsi Unuigbe</h2></li>
+  <li><h2>Aisha Omolayole</h2></li>
+  <li><h2>Ajayi Benjamin Adewunmi</h2></li>
+  <li><h2>Ajie Caleb Ugochukwu</h2></li>
+  <li><h2>Akinfolarin Akinwande Akinbobola</h2></li>
+  <li><h2>Akinyemi Osinubi</h2></li>
+  <li><h2>Alabraba Lance Datonye</h2></li>
+  <li><h2>Alex-Addipe Adeleke</h2></li>
+  <li><h2>Alexandra Thorpe (Dr.)</h2></li>
+  <li><h2>Chief Alex Egbona, PhD</h2></li>
+  <li><h2>Amina Aminu Maitama</h2></li>
+  <li><h2>Amina Maina</h2></li>
+  <li><h2>Amo Hikaru, Adetokunbo Ifeoluwa</h2></li>
+  <li><h2>Andrew Esemezie</h2></li>
+  <li><h2>Anita</h2></li>
+  <li><h2>Arike Aiyetigbo</h2></li>
+  <li><h2>Ariyike Aiyetigbo</h2></li>
+  <li><h2>Asue Ighodalo</h2></li>
+  <li><h2>Austyn Ogannah</h2></li>
+  <li><h2>Bayo Adebiyi</h2></li>
+  <li><h2>Benjamin Enobong Okoko</h2></li>
+  <li><h2>Benjamin Onyekachi Madu</h2></li>
+  <li><h2>Bolaji Gambari</h2></li>
+  <li><h2>C. Etteh</h2></li>
+  <li><h2>Chidi Momah</h2></li>
+  <li><h2>Chinyere Obijuru</h2></li>
+  <li><h2>Christophe R Ifesonachi Ezeh</h2></li>
+  <li><h2>Cynthia Anyadike</h2></li>
+  <li><h2>Cynthia Parrish</h2></li>
+  <li><h2>Damián D. Dodo SAN</h2></li>
+  <li><h2>Daniella Okeke</h2></li>
+  <li><h2>Daramola Oladeji Adeleke</h2></li>
+  <li><h2>Davidson U Anazodo</h2></li>
+  <li><h2>Dorathy Bassey Umoetok</h2></li>
+  <li><h2>Dotun Akande</h2></li>
+  <li><h2>Dozie Okafor</h2></li>
+  <li><h2>Dr. & Mrs. Bolaji Ogundare</h2></li>
+  <li><h2>Dr. Emmanuel Ako</h2></li>
+  <li><h2>Dr. George E. Thorpe</h2></li>
+  <li><h2>Dr. Mrs. Hajia Tanko</h2></li>
+  <li><h2>Ehigie Odiawa Ochei</h2></li>
+  <li><h2>Eleojo Peters</h2></li>
+  <li><h2>Eke Urum Kalu</h2></li>
+  <li><h2>Eliav Homossany</h2></li>
+  <li><h2>Eme Daniel</h2></li>
+  <li><h2>Esemezie Andrew Ogochukwu</h2></li>
+  <li><h2>Fasasi Fadhali Olasubomi</h2></li>
+  <li><h2>Femi Bajomo</h2></li>
+  <li><h2>Harold Obasohan</h2></li>
+  <li><h2>Her Excellency Mrs. Obioma Liyel-Imoke</h2></li>
+  <li><h2>Hon. Kabir Tukura</h2></li>
+  <li><h2>Ibrahim Mohammed</h2></li>
+  <li><h2>Ichechi Ohochukwu</h2></li>
+  <li><h2>Imoukhuede Oseomoje</h2></li>
+  <li><h2>Jean-Claude Havyarimana</h2></li>
+  <li><h2>Johnson Osondu Ememandu</h2></li>
+  <li><h2>Jonathan Warshawsky</h2></li>
+  <li><h2>Kanyeyachukwu Okeke</h2></li>
+  <li><h2>Karimot Abodunrin Tukur</h2></li>
+  <li><h2>Kayode Fadare</h2></li>
+  <li><h2>Lateef Belo-Osagie</h2></li>
+  <li><h2>Luckmore Kudakwashe Lobo</h2></li>
+  <li><h2>Lydie Mananda–Niyonzima</h2></li>
+  <li><h2>Major General Bakare</h2></li>
+  <li><h2>Maryam Orotope Paul</h2></li>
+  <li><h2>Mazi UK Eke</h2></li>
+  <li><h2>Michael Owolabi</h2></li>
+  <li><h2>Minite Oviaesu</h2></li>
+  <li><h2>Mfon Akpan</h2></li>
+  <li><h2>Moodley Vasuthdaven Arumug</h2></li>
+  <li><h2>Mrs. Rose Eshiet</h2></li>
+  <li><h2>Mrs. Sarah</h2></li>
+  <li><h2>Mustapha Umar Ali</h2></li>
+  <li><h2>Nahi Halabi</h2></li>
+  <li><h2>Nancy Julie Ezekwesili</h2></li>
+  <li><h2>Nehemiah Joshua</h2></li>
+  <li><h2>Ndidi Emefiele</h2></li>
+  <li><h2>Nseno J. Umoh</h2></li>
+  <li><h2>Obafemi Adebayo Solebo</h2></li>
+  <li><h2>Okhomina Osamede</h2></li>
+  <li><h2>Olaiya Phillips</h2></li>
+  <li><h2>Olubunmi Otoki</h2></li>
+  <li><h2>Olufisayo Bakare</h2></li>
+  <li><h2>Olujimi Adebowale Emmanuel</h2></li>
+  <li><h2>Olusanya Remilekun A. Badejo</h2></li>
+  <li><h2>Oluwabukola Yewande</h2></li>
+  <li><h2>Oluwatoyin Subair</h2></li>
+  <li><h2>Oluyede Adegoke</h2></li>
+  <li><h2>Omotoke Kuteyi</h2></li>
+  <li><h2>Omosolape Oluwafikemi Odeniyi</h2></li>
+  <li><h2>Ope Richards Osundiran</h2></li>
+  <li><h2>Oredola Olayinka Folashade</h2></li>
+  <li><h2>Oseragba Adogbeji Benjamin</h2></li>
+  <li><h2>Otunba Babatunde Morakinyo</h2></li>
+  <li><h2>Oyakhire Ohirieme Jamgbadi</h2></li>
+  <li><h2>Pastor Agu Irukwu</h2></li>
+  <li><h2>Peter Ekei Duke</h2></li>
+  <li><h2>Prince Nduka Obaigbena</h2></li>
+  <li><h2>Prof. Ifeanyi Patrick Oramah</h2></li>
+  <li><h2>Rajesh Shamdas Hathiramani</h2></li>
+  <li><h2>Rele Sonariwo</h2></li>
+  <li><h2>Rinsola Olaniyi-Agboola</h2></li>
+  <li><h2>Roland Ewubare</h2></li>
+  <li><h2>Scott Tommey</h2></li>
+  <li><h2>Segun Samson Olowokere</h2></li>
+  <li><h2>Seun Jumoke Ishola</h2></li>
+  <li><h2>Shola Coker</h2></li>
+  <li><h2>Success Bassey</h2></li>
+  <li><h2>Tonia Nwamanna</h2></li>
+  <li><h2>Toritseju Akharume</h2></li>
+  <li><h2>Tunde Folawiyo</h2></li>
+  <li><h2>Victor Ehikhamenor</h2></li>
+  <li><h2>Victor Esemezie</h2></li>
+  <li><h2>Victoria Nwuche</h2></li>
+  <li><h2>Vivian Ofili-Aku</h2></li>
+  <li><h2>Wanjiku Muthoni Mugambi</h2></li>
+  <li><h2>Yinka Oluwatimehin</h2></li>
+  <li><h2>Ziza Okeugo</h2></li>
 </ul>
 
 		</div>
