--- a/newsletters/index.html
+++ b/newsletters/index.html
@@ -171,6 +171,7 @@ h6 {
 			<a href="https://drive.google.com/file/d/1zFUNoBf2PuvVvZch0znghdilMuFx8vbO/view?usp=drive_link">May</a>
 			<a href="https://drive.google.com/file/d/1dRGgBxpweNAT8_Hmz0JpMpY_WaGQ0IBy/view?usp=drive_link">June</a>
 			<a href="https://drive.google.com/file/d/1uQFVQWXumHGBY4ZVFJR4NkG39SYd_hPF/view?usp=drive_link">July</a>
+			<a href="https://drive.google.com/file/d/1WKtGxHNa27sDaKH5NHvwXcVqKuoXQ1Fc/view?usp=drive_link">August</a>
         </div>
 		   
 
