--- a/board-members/index.html
+++ b/board-members/index.html
@@ -506,11 +506,11 @@ h6 {
 	</div>
 </div></div></div>
 <div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper">
-<h2 style="text-align: center;font-family:Shadows Into Light Two;font-weight:400;font-style:normal" class="vc_custom_heading">Marilyn Omuabor</h2>
+<h2 style="text-align: center;font-family:Shadows Into Light Two;font-weight:400;font-style:normal" class="vc_custom_heading">Marilyn Ekpe</h2>
 	<div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
 			<p style="text-align: center;">Director Of Administration</p>
-<p style="text-align: center;">Marilyn Omuabor, a graduate of Linguistics with years of administrative experience garnered from both the public and private sector in Nigeria. She is currently The Zeebah Foundation&rsquo;s Director of Administration. She is also affiliated with Gradient Hill (Nig) Ltd. and Peter Bello Foundation.</p>
+<p style="text-align: center;">Marilyn Ekpe, a graduate of Linguistics with years of administrative experience garnered from both the public and private sector in Nigeria. She is currently The Zeebah Foundation&rsquo;s Director of Administration. She is also affiliated with Gradient Hill (Nig) Ltd. and Peter Bello Foundation.</p>
 
 		</div>
 	</div>
